--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,18 +51,23 @@ body {
 .ant-tabs-nav {
   overflow-x: auto !important;  /* скролл только внутри навигации */
   max-width: 100%; /* не больше родителя */
+  
 }
 
 /* Убираем overflow:hidden и nowrap для вкладок */
 .ant-tabs-nav-wrap {
   overflow: visible !important;
   display: inline-block; /* чтобы не растягивался на всю ширину */
+  overflow-x: hidden !important;
+  overflow-y: hidden !important;
 }
 
 .ant-tabs-nav-list {
   white-space: nowrap;
   flex-wrap: nowrap !important;
   max-width: 100%; /* чтобы не выходил за пределы родителя */
+  overflow-x: hidden !important;
+  overflow-y: hidden !important;
 }
 /* Отключить горизонтальный скроллбар у табов Ant Design */
 .ant-tabs-nav-list {
